--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=LaraVellous
+APP_NAME=Wishlist
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -17,7 +17,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravellous
+DB_DATABASE=wishlist
 DB_USERNAME=sail
 DB_PASSWORD=password
 
