--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.13",
-        "@heroicons/vue": "^2.0.18",
-        "flowbite": "^1.7.0"
+        "@heroicons/vue": "^2.0.18"
     }
 }
