Added username to database

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_URL=http://localhost
 
 ADMIN_NAME=Bob
 ADMIN_EMAIL=example@gmail.com
+ADMIN_USERNAME=Bob123
 ADMIN_PASSWORD=password
 
 SHOW_LOGIN_BUTTON=true
