--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.7",
-        "axios": "^1.1.2",
+        "axios": "^1.4.0",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.13",
-        "@heroicons/vue": "^2.0.18"
+        "@heroicons/vue": "^2.0.18",
+        "lodash": "^4.17.21"
     }
 }
