--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=wishlist
+DB_DATABASE=wish4it
 DB_USERNAME=sail
 DB_PASSWORD=password
 
