--- a/.github/workflows/laravel-tests.yaml
+++ b/.github/workflows/laravel-tests.yaml
@@ -2,9 +2,9 @@ name: Run Laravel Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   tests:
