--- a/.github/workflows/laravel-tests.yaml
+++ b/.github/workflows/laravel-tests.yaml
@@ -35,16 +35,8 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
       
-    - name: Configure .env
-      run: |
-        echo "DB_HOST=127.0.0.1" >> .env
-        echo "DB_PORT=3306" >> .env
-        echo "DB_DATABASE=laravel" >> .env
-        echo "DB_USERNAME=root" >> .env
-        echo "DB_PASSWORD=" >> .env
-
     - name: Generate key
       run: php artisan key:generate
 
