--- a/.env.testing
+++ b/.env.testing
@@ -1,54 +1,12 @@
 APP_NAME=Wish4it
 APP_ENV=testing
-APP_KEY=base64:fyIYkPolsVJBls8ouvVthpaS5AeZ1ZioAsHZVpc8n6M
+APP_KEY=base64:jJrrg0ToYPPakevpqLVocOPZVoiIsexEhPw58J+ClyI=
 APP_DEBUG=true
 APP_URL=http://localhost
 SAIL_XDEBUG_MODE=debug
 
+DB_CONNECTION=sqlite_testing
+
 ADMIN_NAME=Bob
-ADMIN_EMAIL=example@gmail.com
-ADMIN_USERNAME=Bob123
+ADMIN_EMAIL=bob@gmail.com
 ADMIN_PASSWORD=password
-
-SHOW_LOGIN_BUTTON=true
-
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-# SQL Database
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=testing
-DB_USERNAME=sail
-DB_PASSWORD=password
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
-
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
