--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,9 +2,9 @@ name: CD Pipeline
 
 on:
   workflow_dispatch: 
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 env:
   IMAGE_NAME: wish4it-image
