enabled dark mode

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ ADMIN_USERNAME=Bob123
 ADMIN_PASSWORD=password
 
 SHOW_LOGIN_BUTTON=true
+TELESCOPE_ENABLED=true
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
