--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
         "symfony/browser-kit": "*",
         "tightenco/ziggy": "^1.0"
     },
